correct upload to github web for dashboard

--- a/Visualization_Dashboard/assets/css/style.css
+++ b/Visualization_Dashboard/assets/css/style.css
@@ -1278,7 +1278,7 @@ section {
 }
 
 .portfolio .portfolio-item {
-  background: #1e4356;
+  background: #fffff;
   overflow: hidden;
   min-height: 200px;
   position: relative;
@@ -1302,7 +1302,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info h3 {
   font-size: 22px;
-  color: #fff;
+  color: #68A4C4;
   font-weight: bold;
 }
 
@@ -1313,7 +1313,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-info a i:hover {
-  color: white;
+  color: #1e4356;
 }
 
 .portfolio .portfolio-item:hover img {
@@ -2301,5 +2301,4 @@ section {
 #footer .credits a {
   color: #a2cce3;
 }
-
 
