--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ figure figcaption {
 
 #fh5co-hero {
   min-height: 500px;
-  background: #fff url(../images/loader.gif) no-repeat center center;
+  background: #fff;
   width: 100%;
   float: left;
   clear: both;
@@ -380,9 +380,9 @@ figure figcaption {
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
   margin-bottom: 20px;
-  font-size: 45px;
+  font-size: 40px;
   line-height: 1.3;
-  font-weight: 100;
+  font-weight: 300;
   font-family: "Roboto", Arial, sans-serif;
 }
 @media screen and (max-width: 768px) {
